@@ -1,3 +1,5 @@
 # ADSML-S
 
 jdk11
+
+--module-path "${javafx-sdk-path}\lib" --add-modules javafx.controls,javafx.fxml
